--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/menu_desktop.css" media="screen and (min-width : 800px)">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index_desktop.css" media="screen and (min-width : 800px)">
     <link rel="shortcut icon" href="data:,">
@@ -16,16 +18,16 @@
             </div>
             <h1>Unefa Cafe</h1>
             <ul class="desktop_menu">
-                <a href=""><li>Productos</li></a>
-                <a href=""><li>Contacto</li></a>
-                <a href=""><li>Horarios</li></a>
+                <a href="productos.html"><li>Productos</li></a>
+                <a href="contacto.html"><li>Contacto</li></a>
+                <a href="horarios.html"><li>Horarios</li></a>
             </ul>
         </nav>
         <div id="menu_mobile" class="off">
             <ul>
-                <a href=""><li>Buenas</li></a>
-                <a href=""><li>Tardes</li></a>
-                <a href=""><li>Gente</li></a>
+                <a href="productos.html"><li>Productos</li></a>
+                <a href="contacto.html"><li>Contacto</li></a>
+                <a href="horarios.html"><li>Horarios</li></a>
             </ul>
         </div>
     </header>
@@ -51,7 +53,7 @@
         Ratione laudantium impedit voluptas suscipit repellendus. Et eligendi adipisci aspernatur nulla quis, quidem ad porro dolorum delectus cupiditate sunt, temporibus ipsam. Accusantium, incidunt consectetur. Accusamus commodi eaque dolores debitis a?</p>
         
     </main>
-    <footer></footer>
+    <footer><p>Jhosmar Suarez, Derechos reservados</p></footer>
     <script src="js/video_script.js"></script>
     <script src="js/mobile_menu.js"></script>
 </body>
