--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/menu_desktop.css" media="screen and (min-width : 800px)">
     <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="css/contacto_desktop.css" media="screen and (min-width: 800px)">
     <title>Document</title>
 </head>
 <body>
@@ -34,17 +35,20 @@
             <form action="" id="formulario">
                 <label for="first_name">Nombre</label>
                 <input type="text" placeholder="Mario" name="first_name">
+                <br>
                 <label for="last_name">Apellido</label>
                 <input type="text" placeholder="Suarez" name="last_name">
+                <br>
                 <label for="email">Correo</label>
                 <input type="email" name="email" placeholder="xxx@gmail.com">
+                <br>
                 <label for="phonenumber">telefono</label>
                 <input type="tel" name="phonenumber" placeholder="uwu">
-                <input type="submit" value="enviar">
+                <input type="submit" value="enviar" id="button">
             </form>
         </div>
     </main>
-    <footer></footer>
+    <footer><p>Jhosmar Suarez, Derechos reservados</p></footer>
     <script src="js/mobile_menu.js"></script>
 </body>
 </html>
