--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <video id="video_banner" src="resources/vid/loop.mp4" autoplay loop muted></video>
         </div>
         <section class="intersection">
-
+            <p>alaverga no se que escribir</p>
         </section>
         <section class="container">
             <div class="text" id="left">
