--- a/productos.html
+++ b/productos.html
@@ -32,56 +32,140 @@
         </div>
     </header>
     <main>
+        <section id="bebidas">
+            <h2>Bebidas</h2>
+            <div class="producto">
+                <img src="resources/img/productos/espresso.jpg" alt="espresso">
+                <div class="texto">
+                    <h3>Espresso</h3>
+                    <br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                </div>
+            </div>
+            <div class="producto">
+                <img src="resources/img/productos/latte.jpg" alt="latte">
+                <div class="texto">
+                    <h3>Latte</h3>
+                    <br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                </div>
+            </div>
+            <div class="producto">
+                <img src="./resources/img/productos/caramel_macciato.jpg" alt="caramel_macciato">
+                <div class="texto">
+                    <h3>Caramel macciato</h3>
+                    <br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                </div>
+            </div>
+            <div class="producto">
+                <img src="./resources/img/productos/mocca.jpg" alt="Moccacino">
+                <div class="texto">
+                    <h3>Moccacino</h3>
+                    <br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                </div>
+            </div>
+            <div class="producto">
+                <img src="./resources/img/productos/bombon.jpg" alt="bombon">
+                <div class="texto">
+                    <h3>bombon</h3>
+                    <br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                </div>
+            </div>
+            <div class="producto">
+                <img src="./resources/img/productos/frapuccino.jpg" alt="frapuccino">
+                <div class="texto">
+                    <h3>Frapuccino</h3>
+                    <br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                </div>
+            </div>
+    </section>
+    <section id="desayunos">
+        <h2>Desayuno</h2>
         <div class="producto">
-            <img src="resources/img/productos/espresso.jpg" alt="espresso">
+            <img src="./resources/img/productos/croissant.jpg" alt="croissant">
             <div class="texto">
-                <h3>Espresso</h3>
+                <h3>Croissant</h3>
                 <br>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="resources/img/productos/latte.jpg" alt="latte">
+            <img src="./resources/img/productos/sandwich.jpg" alt="sandwich">
             <div class="texto">
-                <h3>Espresso</h3>
+                <h3>Sandwich</h3>
                 <br>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="" alt="">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
             <div class="texto">
-                <h3>Espresso</h3>
+                <h3>Hamburguesa</h3>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+            </div>
+        </div>
+    </section>
+    <section id="almuerzos">
+        <h2>Almuerzos</h2>
+        <div class="producto">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <div class="texto">
+                <h3>Hamburguesa</h3>
                 <br>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="" alt="">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
             <div class="texto">
-                <h3>Espresso</h3>
+                <h3>Hamburguesa</h3>
                 <br>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="" alt="">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
             <div class="texto">
-                <h3>Espresso</h3>
+                <h3>Hamburguesa</h3>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+            </div>
+        </div>
+    </section>
+    <section id="cenas">
+        <h2>Cenas</h2>
+        <div class="producto">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <div class="texto">
+                <h3>Hamburguesa</h3>
                 <br>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="" alt="">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
             <div class="texto">
-                <h3>Espresso</h3>
+                <h3>Hamburguesa</h3>
                 <br>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
             </div>
         </div>
+        <div class="producto">
+            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <div class="texto">
+                <h3>Hamburguesa</h3>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+            </div>
+        </div>
+    </section>
     </main>
-    <footer></footer>
+    <footer><p>Jhosmar Suarez, Derechos reservados</p></footer>
     <script src="js/mobile_menu.js"></script>
 </body>
 </html></html>
