--- a/productos.html
+++ b/productos.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <section id="bebidas">
+        <section id="bebidas" class="productos">
             <h2>Bebidas</h2>
             <div class="producto">
                 <img src="resources/img/productos/espresso.jpg" alt="espresso">
@@ -83,7 +83,7 @@
                 </div>
             </div>
     </section>
-    <section id="desayunos">
+    <section id="desayunos" class="productos">
         <h2>Desayuno</h2>
         <div class="producto">
             <img src="./resources/img/productos/croissant.jpg" alt="croissant">
@@ -110,7 +110,7 @@
             </div>
         </div>
     </section>
-    <section id="almuerzos">
+    <section id="almuerzos" class="productos">
         <h2>Almuerzos</h2>
         <div class="producto">
             <img src="./resources/img/productos/burguer.jpg" alt="croissant">
@@ -137,7 +137,7 @@
             </div>
         </div>
     </section>
-    <section id="cenas">
+    <section id="cenas" class="productos">
         <h2>Cenas</h2>
         <div class="producto">
             <img src="./resources/img/productos/burguer.jpg" alt="croissant">
