--- a/contacto.html
+++ b/contacto.html
@@ -33,6 +33,7 @@
     <main>
         <div class="container">
             <form action="" id="formulario">
+                <h1>Datos de contacto:</h1>
                 <label for="first_name">Nombre</label>
                 <input type="text" placeholder="Mario" name="first_name">
                 <br>
@@ -44,9 +45,14 @@
                 <br>
                 <label for="phonenumber">telefono</label>
                 <input type="tel" name="phonenumber" placeholder="uwu">
+                <p>Al suministrar sus datos se suscribe al sistema de correos.</p>
                 <input type="submit" value="enviar" id="button">
             </form>
         </div>
+        <section id="map">
+            <h1>Nuestra Ubicacion:</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.056960665955!2d-72.2013666!3d7.7837858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e666cf084fb02c3%3A0x7d6ee3f98e661e9e!2sUNEFA!5e0!3m2!1sen!2sve!4v1698220001152!5m2!1sen!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
     </main>
     <footer><p>Jhosmar Suarez, Derechos reservados</p></footer>
     <script src="js/mobile_menu.js"></script>
