--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>En Unefa Café, nuestros baristas están altamente capacitados para preparar una taza de café perfecta, utilizando los mejores granos de café arábica. También ofrecemos una variedad de bebidas y alimentos, para que nuestros clientes puedan disfrutar de un momento de relajación y placer. </p>
 
             <p>Unefa Café es un lugar ideal para reunirse con amigos, estudiar o simplemente disfrutar de una buena taza de café. Ven y descubre por qué Unefa Café es la cafetería favorita de la UNEFA.</p>
-            <a href="contacto.html">Nuestra direccion</a>
+            <a href="contacto.html#map">Nuestra direccion</a>
             <a href="" id="button">Ver instalaciones</a>
 
         </section>
