--- a/productos.html
+++ b/productos.html
@@ -39,7 +39,7 @@
                 <div class="texto">
                     <h3>Espresso</h3>
                     <br>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                    <p>El café espresso es una bebida concentrada de café que se prepara forzando agua caliente a alta presión a través de café molido fino. Tiene un sabor intenso y rico, con notas de chocolate, caramelo y frutos secos. Se suele servir en una taza pequeña, de unos 30 ml.</p>
                 </div>
             </div>
             <div class="producto">
@@ -47,7 +47,7 @@
                 <div class="texto">
                     <h3>Latte</h3>
                     <br>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                    <p>El café latte es una bebida de café hecha con espresso y leche al vapor. Se suele servir en una taza grande, con una capa de espuma de leche en la parte superior.</p>
                 </div>
             </div>
             <div class="producto">
@@ -55,7 +55,7 @@
                 <div class="texto">
                     <h3>Caramel macciato</h3>
                     <br>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                    <p>El café caramel macchiato es una bebida de café hecha con espresso, leche al vapor y caramelo. Se suele servir en un vaso transparente, con el espresso en la parte inferior, la leche al vapor en el medio y el caramelo en la parte superior.</p>
                 </div>
             </div>
             <div class="producto">
@@ -63,7 +63,7 @@
                 <div class="texto">
                     <h3>Moccacino</h3>
                     <br>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                    <p>El café moca es una bebida de café hecha con espresso, leche al vapor y chocolate. Se suele servir en una taza grande, con una capa de chocolate en la parte superior</p>
                 </div>
             </div>
             <div class="producto">
@@ -71,7 +71,7 @@
                 <div class="texto">
                     <h3>bombon</h3>
                     <br>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                    <p>El café bombón es una bebida de café dulce y cremosa, hecha con espresso y leche condensada. Se suele servir en un vaso de cristal transparente, con el espresso en la parte inferior y la leche condensada en la parte superior.</p>
                 </div>
             </div>
             <div class="producto">
@@ -79,7 +79,7 @@
                 <div class="texto">
                     <h3>Frapuccino</h3>
                     <br>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                    <p>El café frappuccino es una bebida de café helada, hecha con espresso, leche, hielo y otros ingredientes, como chocolate, caramelo o vainilla. Se suele servir en un vaso grande y tiene una textura cremosa y espumosa.</p>
                 </div>
             </div>
     </section>
@@ -90,7 +90,7 @@
             <div class="texto">
                 <h3>Croissant</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>El croissant es un pan dulce en forma de media luna, hecho con una masa de hojaldre con levadura. Tiene una corteza crujiente y una miga aireada. Es un desayuno o merienda popular en muchos países del mundo.</p>
             </div>
         </div>
         <div class="producto">
@@ -98,69 +98,69 @@
             <div class="texto">
                 <h3>Sandwich</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>El sándwich es un alimento hecho con dos rebanadas de pan entre las que se coloca algún ingrediente, como carne, queso, embutido, vegetales u otros alimentos. Es una comida rápida y sencilla que se puede preparar con una variedad de ingredientes.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/arepa.webp" alt="arepa">
             <div class="texto">
                 <h3>Hamburguesa</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>La arepa es un pan plano hecho con harina de maíz, sal y agua. Es un alimento tradicional de Venezuela y Colombia, y se puede rellenar con una variedad de ingredientes, como carne, queso, frijoles, huevos, vegetales, etc.</p>
             </div>
         </div>
     </section>
     <section id="almuerzos" class="productos">
         <h2>Almuerzos</h2>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/chicken.jpg" alt="chicken">
             <div class="texto">
-                <h3>Hamburguesa</h3>
+                <h3>Pollo frito</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>El pollo frito es un plato de carne de pollo que se fríe en aceite caliente. Es un plato popular en todo el mundo, y se puede preparar de diversas maneras.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/pasta.jpg" alt="pasta">
             <div class="texto">
-                <h3>Hamburguesa</h3>
+                <h3>Pasta carbonara</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>La pasta carbonara es un plato de pasta italiano hecho con huevos, queso parmesano, pimienta negra y guanciale o panceta. Es un plato sencillo pero delicioso, que se caracteriza por su salsa cremosa y su sabor ahumado.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/salad.jpg" alt="salad">
             <div class="texto">
-                <h3>Hamburguesa</h3>
+                <h3>Ensalada cesar</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>La ensalada César es una ensalada fría hecha con lechuga romana, crutones, queso parmesano, y un aderezo César hecho con anchoas, huevo, aceite de oliva, jugo de limón, y salsa Worcestershire. Es un plato popular en todo el mundo, y se puede encontrar en restaurantes de todo tipo.</p>
             </div>
         </div>
     </section>
     <section id="cenas" class="productos">
         <h2>Cenas</h2>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/burguer.jpg" alt="burguer">
             <div class="texto">
                 <h3>Hamburguesa</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>La hamburguesa es un sándwich hecho con carne picada, generalmente de carne de res, que se cocina a la parrilla o a la plancha y se coloca entre dos panes. Es un alimento popular en todo el mundo, y se puede encontrar en restaurantes de todo tipo.</p>
             </div>
         </div>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/hotdog.jpg" alt="hotdog">
             <div class="texto">
-                <h3>Hamburguesa</h3>
+                <h3>Perro caliente</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>El perro caliente es un alimento hecho con una salchicha cocida, generalmente de carne de res o de cerdo, que se coloca en un panecillo alargado. Se suele servir con una variedad de condimentos, como ketchup, mostaza, mayonesa, cebolla, lechuga y pepinillos. </p>
             </div>
         </div>
         <div class="producto">
-            <img src="./resources/img/productos/burguer.jpg" alt="croissant">
+            <img src="./resources/img/productos/pizza.jpg" alt="pizza">
             <div class="texto">
-                <h3>Hamburguesa</h3>
+                <h3>Pizza</h3>
                 <br>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut debitis perspiciatis qui fuga cupiditate perferendis, delectus molestias amet fugiat expedita, ut quia ea ipsa vel aperiam necessitatibus, odio reprehenderit laborum.</p>
+                <p>La pizza es un plato de origen italiano hecho con una base de masa de harina de trigo, agua, sal y levadura, que se cubre con salsa de tomate y queso mozzarella y se hornea en un horno de alta temperatura</p>
             </div>
         </div>
     </section>
