--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             <img src="resources/img/hombre_cafe.jpg" alt="hombre_coffee" id="hombre_coffee">
         </section>
         <section class="intersection">
-            <h2>Un cafe en la unefa??</h2>
-            <p>Unefa Café es una cafetería que nace de la pasión por el café y la educación. Ubicada en el corazón de la Universidad Nacional Experimental de las Fuerzas Armadas, Unefa Café ofrece a sus clientes una experiencia única, combinando la excelencia del café venezolano con un ambiente cálido y acogedor.</p>
+            <h2>Nuestras instalaciones</h2>
+            <p>El café unefa es un espacio acogedor y confortable ubicado en el campus de la Universidad Nacional Experimental de la Fuerza Armada (UNEFA), en Táchira, Venezuela. El café está decorado con un estilo moderno y minimalista, con colores claros y líneas sencillas.</p>
+            <p>El espacio está dividido en dos zonas: una zona de mesas y sillas para comer y beber, y una zona de sofás y mesas bajas para relajarse y conversar. La zona de mesas y sillas está equipada con una barra donde se sirven los alimentos y bebidas.</p>
+            <p>La zona de sofás y mesas bajas está decorada con plantas y flores, creando un ambiente cálido y acogedor. En esta zona, los clientes pueden disfrutar de una taza de café, un libro o una conversación con amigos.</p>
+            <p>Ofrecemos una variedad de alimentos y bebidas, incluyendo desayunos, almuerzos, cenas, postres y bebidas calientes y frías. Los alimentos son preparados con ingredientes frescos y de alta calidad.</p>
+            <p>Nota: El café unefa tiene una capacidad para 100 personas. El café está abierto todos los días de la semana, de 7:00 a.m. a 10:00 p.m. El café cuenta con Wi-Fi gratuito. El café tiene estacionamiento gratuito.</p>
 
-            <p>En Unefa Café, nuestros baristas están altamente capacitados para preparar una taza de café perfecta, utilizando los mejores granos de café arábica. También ofrecemos una variedad de bebidas y alimentos, para que nuestros clientes puedan disfrutar de un momento de relajación y placer. </p>
-
-            <p>Unefa Café es un lugar ideal para reunirse con amigos, estudiar o simplemente disfrutar de una buena taza de café. Ven y descubre por qué Unefa Café es la cafetería favorita de la UNEFA.</p>
             <a href="contacto.html#map">Nuestra direccion</a>
             <a href="" id="button">Ver instalaciones</a>
 
