--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
             <p>Ofrecemos una variedad de alimentos y bebidas, incluyendo desayunos, almuerzos, cenas, postres y bebidas calientes y frías. Los alimentos son preparados con ingredientes frescos y de alta calidad.</p>
             <p>Nota: El café unefa tiene una capacidad para 100 personas. El café está abierto todos los días de la semana, de 7:00 a.m. a 10:00 p.m. El café cuenta con Wi-Fi gratuito. El café tiene estacionamiento gratuito.</p>
 
-            <a href="contacto.html#map">Nuestra direccion</a>
+            <a href="contacto.html">Nuestra direccion</a>
             <a href="" id="button">Ver instalaciones</a>
 
         </section>
